--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,18 +256,18 @@ font-size: 1rem;
 }
 
 .top-bar img.dsa-rose-mark {
-  height: 2.5rem;
+  height: 2rem;
   width: auto;
-  display: inline-block;
+  display: inline-flex;
   padding: 0;
-  margin: 0.25rem 0rem 0.25rem 0.25rem;
+  margin: 0.25rem;
   line-height:1;
   vertical-align: top;
 }
 
 .menu li a.dsa-top-name {
-  display:inline-block;
-  padding: 1rem 1rem 1rem 0.25rem;
+  display: inline-flex;
+  padding: 0.75rem 0 0.75rem 0;
   font-weight: bold;
   font-weight: 700;
 }
