Removes HTML tags for events on homepage

--- a/assets/css/amazon.css
+++ b/assets/css/amazon.css
@@ -286,6 +286,10 @@ body, p, li, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   font-family: "Inter","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: 700;
+}
+
 .grid-container p {
   color: #a9b1bb;
   font-size: 1.2rem;
@@ -359,6 +363,7 @@ body, p, li, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
 .breadcrumbs {
   font-size: 0.9rem;
 }
+
 
 /*********************
 COMMENT STYLES
