--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 1. WEB FONTS
 *********************/
 
-html, body { font-family: "Inter", sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; }
+html, body, h1, h2, h3, h4, h5, p { font-family: "Inter", sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; }
 
 /************************************************
 
